fix services section mobile styles

--- a/index.css
+++ b/index.css
@@ -122,8 +122,9 @@ ul {
     font-weight: bold;
   }
   .hero{
-    padding: 0 20px;
+    padding: 60px 20px;
     background-position: center;
+    height: auto;
   }
   .text  {
     width: 100%;
@@ -147,8 +148,20 @@ ul {
     margin-left: 0;
     padding-left: 10px;
   }
+ .main-container .services{
+    padding: 40px 20px;
+  }
   .services .services-grid{
    flex-direction: column;
+   margin-top: 40px;
+   row-gap: 40px;
+  }
+  .services .servtext{
+    text-align: center;
+  }
+  .services .service-item{
+    align-items: center;
+    width: 100%;
   }
   .portfolio-item img {
     display: none
